projet-GKE/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: app-ingress 
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nginx-aminou 
    networking.k8s.io/managed-certificates: managed-cert 
    networking.k8s.io/v1beta1.FrontendConfig: redirect-https
spec:
  rules:
    - host: nginx-aminou
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
